Prevent link bar on card being too high when empty

--- a/src/components/gallery.css
+++ b/src/components/gallery.css
@@ -18,6 +18,7 @@
 }
 .gallery-content .card {
   max-height: calc(64px + 6em);
+  height: calc(64px + 6em);
   text-overflow: ellipsis;
   overflow: hidden;
   border-radius: 0 0 4px 4px;
@@ -84,6 +85,7 @@
   }
   .gallery-content .card {
     max-height: calc(64px + 5em);
+    height: calc(64px + 5em;)
   }
   .gallery {
     min-height: calc(256px + 64px + 5em + 96px);
@@ -103,6 +105,7 @@
   }
   .gallery-content .card {
     max-height: calc(64px + 3em);
+    height: calc(64px + 3em);
   }
   .gallery {
     min-height: calc(256px + 64px + 3em + 96px);
